--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<div  class="d-flex align-items-center justify-content-center">
-					<img style="width: 15px;" src="./images/call.png" alt="">
-					<h2  id="colorlib-logo2" class="ml-2 mb-3"><br> 7999759573</h2>
+				<div  class="d-flex align-items-center justify-content-center flex-column">
+					<h3 class="mb-1">CALL FOR BOOKINGS </h3>
+					<h3>7999759573</h3>
 				</div>
 			
 				
