--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
 </head>
 <body>
 
+	<div id="load">
+		<img src="./images/Advaita E&M OG Colour (1).png" alt="">
+   </div>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
@@ -38,9 +41,9 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<div  class="d-flex align-items-center justify-content-center">
-					<img style="width: 15px;" src="./images/call.png" alt="">
-					<h2  id="colorlib-logo2" class="ml-2 mb-3"><br> 7999759573</h2>
+				<div  class="d-flex align-items-center justify-content-center flex-column">
+					<h3 class="mb-1">CALL FOR BOOKINGS </h3>
+					<h3>7999759573</h3>
 				</div>
 			
 				
@@ -90,6 +93,7 @@
 		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
+		<script src="js/lader.js"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-migrate-3.0.1.min.js"></script>
 		<script src="js/popper.min.js"></script>
