--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,9 @@
 	
 </head>
 <body>
-
+	<div id="load">
+		<img src="./images/Advaita E&M OG Colour (1).png" alt="">
+   </div>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
@@ -60,27 +62,15 @@
 
 		
 			<div class="colorlib-footer">
-
-
-				<div  class="d-flex align-items-center justify-content-center">
-					<div class="social-media">
-						<a href="#"><i class="fa fa-facebook-f"></i></a>
-					   <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
-					   <a href="https://www.instagram.com/advaita_events?igsh=dThlMTVnY3VzdWxh"
-						   target="_blank"><i class="fa fa-instagram"></i></a>
-					   <!-- <a href="https://www.youtube.com/channel/UCWcwkLudfwgP_KuQvg7Rb5g"><i
-							   class="fab fa-youtube"></i></a>
-					   <a href="https://www.linkedin.com/in/nihal-turkar-79055422a/"><i
-							   class="fab fa-linkedin-in"></i></a> -->
-				   </div>
-					 <a href="tel://7999759573" class="d-flex align-items-center justify-content-between" style="font-size: 20px;"><i class="fa fa-phone"></i> <span id="colorlib-logo2" style="margin-left: 10px;">7999759573</span></a>
-					
+				<div  class="d-flex align-items-center justify-content-center flex-column">
+					<h3 class="mb-1">CALL FOR BOOKINGS </h3>
+					<h3>7999759573</h3>
 				</div>
 			
 				
-				<p class="pfooter text-center">
+				<p class="pfooter text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by ADVAITA
-					</p>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 				</div>
 			</aside> <!-- END COLORLIB-ASIDE -->
 			<div id="colorlib-main">
@@ -183,6 +173,7 @@
 		<!-- <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div> -->
 
 
+		<script src="js/lader.js"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-migrate-3.0.1.min.js"></script>
 		<script src="js/popper.min.js"></script>
